add html and css

--- a/index — копия.html
+++ b/index — копия.html
@@ -38,27 +38,39 @@
                 <h2>Languages</h2>
                 <div>   
                     <h4>English</h4>
-                    <p>Intermediate(B1)</p>
+                    <p>Intermediate(B1+)</p>
                 </div> 
                 <div>   
                     <h4>Russian</h4>
                     <p>Native</p>
                 </div>
             </div>
+            <div class="education">
+                <h2>Education</h2>
+                <div>   
+                    <h3>
+                        Vitebsk State Technological University
+                    </h3>
+                </div>
+                <div>   
+                    <h4>
+                        Engineer-Technologist
+                    </h4>
+                    <div>
+                    <p>Spt 2008 - Jun 2013</p>       
+                    </div>
+                </div>
+            </div>
             <div class="expirience">
                 <h2>Expirience</h2>
                 <div>   
-                    <div><h4>PTUE KDO-resurs(Vitebsk)</h4></div>
-                    <div><p>Leading technologist 2016-2022</p></div>
+                    <div><h4>Lala</h4></div>
+                    <div><p>Intermediate(B1+)</p></div>
                 </div> 
                 <div>   
-                    <div><h4></h4></div>
-                    <div><p>Head of department 2015-2016</p></div>
-                </div> 
-                <div>   
-                    <div><h4>SUKNO(Minsk)</h4></div>
-                    <div><p>Technologist 2013-2015</p></div>
-                </div> 
+                    <div><h4>Russian</h4></div>
+                    <div><p>Native</p></div>
+                </div>
             </div>
             </div>
         <div class="column_two">
@@ -69,7 +81,7 @@
                 </div>
                 <div>
                     <h2>About me</h2>
-                    <p>Hello! I'm starting frontend developer. I have experience in JS (ES6), TS, React, Redux. I've created several applications while I was learning. I strive to develop as a React developer. And few words about me: I have good time management, I'm team player!</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto excepturi fuga eaque dolorem! Ipsa, tenetur quod. Molestiae ipsam officia nobis soluta natus, harum aspernatur debitis enim exercitat Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto excepturi fuga eaque dolorem! Ipsa, tenetur quod. Molestiae ipsam officia nobis soluta natus, harum aspernatur debitis enim exercitationem repellenduionem repellendus neque totam.Lom dolor, sit amet consectetur adipisicing elit. Architecto excepturi fuga eaque dolorem! Ipsa, tenetur quod. Molestiae ipsam officia nobis soluta natus,fuga eaque dolorem! Ipsa, tenetur quod.ae ipsam officia nobis soluta natus, harum aspernatur</p>
                 </div>
             </div>
             <div class="skills">
@@ -145,39 +157,40 @@
                             Webpack
                         </li>
                     </div>
+                    <div>
+                        <li>
+                            GraphQL
+                        </li>
+                    </div>
                     <!-- <div>
                         <li>
                             Material UI
                         </li>
                     </div> -->
                 </div>
-            </div>   
-            <div class="education">
-                <h2>Education</h2>
-                <div>   
-                    <h3>
-                        Vitebsk State Technological University
-                    </h3>
-                </div>
-                <div>   
-                    <h4>
-                        Engineer-Technologist
-                    </h4>
-                    <div>
-                    <p>Spt 2008 - Jun 2013</p>       
-                    </div>
-                </div>
-            </div> 
+            </div>    
             <div class="projects">
                 <h2>Projects</h2>
                 <div>
                     <div>
-                        <h4>Todo List (React, Typescript, Redux-Toolkit, FramerMotion, React-beautiful-dragNdrop, CSS)</h4>
-                        <p><a href="https://alexzdesev90.github.io/todolist-typescript/">Project Link</a></p>
+                        <h3>one</h3>
+                        <p>1</p>
                     </div>
                     <div>
-                        <h4>Cost accounting app (React, CSS, Styled-components)</h4>
-                        <p><a href="https://alexzdesev90.github.io/moneyApp/">Project Link</a></p>
+                        <h3>two</h3>
+                        <p>2</p>
+                    </div>
+                    <div>
+                        <h3>three</h3>
+                        <p>3</p>
+                    </div>
+                    <div>
+                        <h3>four</h3>
+                        <p>4</p>
+                    </div>
+                    <div>
+                        <h3>five</h3>
+                        <p>5</p>
                     </div>
                 </div>
             </div>
