--- a/index.html
+++ b/index.html
@@ -179,6 +179,10 @@
                         <h4>Cost accounting app (React, CSS, Styled-components)</h4>
                         <p><a href="https://alexzdesev90.github.io/moneyApp/">Project Link</a></p>
                     </div>
+                     <div>
+                        <h4>Cost accounting app (React, CSS, Fetch)</h4>
+                        <p><a href="https://alexzdesev90.github.io/weather/">Project Link</a></p>
+                    </div>
                 </div>
             </div>
         </div>
