Added a link to the 4th project

--- a/index.html
+++ b/index.html
@@ -180,8 +180,12 @@
                         <p><a href="https://alexzdesev90.github.io/moneyApp/">Project Link</a></p>
                     </div>
                      <div>
-                        <h4>Cost accounting app (React, CSS, Fetch)</h4>
+                        <h4>Weather app (React, CSS, Fetch)</h4>
                         <p><a href="https://alexzdesev90.github.io/weather/">Project Link</a></p>
+                    </div>
+                     <div>
+                        <h4>Calculator (React, CSS)</h4>
+                        <p><a href="https://alexzdesev90.github.io/calculator/">Project Link</a></p>
                     </div>
                 </div>
             </div>
