--- a/index.html
+++ b/index.html
@@ -145,11 +145,6 @@
                             Webpack
                         </li>
                     </div>
-                    <!-- <div>
-                        <li>
-                            Material UI
-                        </li>
-                    </div> -->
                 </div>
             </div>   
             <div class="education">
@@ -178,6 +173,14 @@
                     <div>
                         <h4>Cost accounting app (React, CSS, Styled-components)</h4>
                         <p><a href="https://alexzdesev90.github.io/moneyApp/">Project Link</a></p>
+                    </div>
+                     <div>
+                        <h4>Weather app (React, CSS, Fetch)</h4>
+                        <p><a href="https://alexzdesev90.github.io/weather/">Project Link</a></p>
+                    </div>
+                     <div>
+                        <h4>Calculator (React, CSS)</h4>
+                        <p><a href="https://alexzdesev90.github.io/calculator/">Project Link</a></p>
                     </div>
                 </div>
             </div>
